--- a/DotNetCoreSqlDb/appsettings.json
+++ b/DotNetCoreSqlDb/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "AZURE_SQL_CONNECTIONSTRING": "Data Source=.\\SQLEXPRESS;Initial Catalog=az305;Integrated Security=True;TrustServerCertificate=True"
-  }
+  "AllowedHosts": "*"
 }
